# aivillage.co

./: .gitignore  README.md  asset-manifest.json  index.html  manage.py  pyproject.toml  requirements.txt
aivillage-frontend/: package-lock.json  package.json
aivillage-frontend/src/: App.js  index.js  styles.css  styles_backup.css
aivillage-frontend/src/components/: Conversation.js  GeneratePersona.js  LandingPage.js  LandingPersonaCard.js  Login.js  PersonaCard.js  PersonaList.js  PersonasPage.js  Sidebar.js  TopBar.js
aivillage1/: asgi.py  urls.py  wsgi.py
village_chatbot/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
village_chatbot/migrations/: 0001_initial.py  0002_conversation_multi_chat_id.py  0003_persona_user_generated_persona_prompt.py  0004_persona_age_persona_gender_persona_interests_and_more.py  0005_alter_persona_gender.py  0006_remove_persona_preview.py
